<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="design_category"
        app:title="Design">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/PREF_KEY_THEME"
            android:icon="@drawable/ic_brightness_24dp"
            android:title="@string/dark_theme"
            android:summary="@string/enable_dark_theme"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="notification_category"
        app:title="Benachrichtigung">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/PREF_KEY_NOTIFICATIONS"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="Benachrichtigungen erhalten"/>
    </PreferenceCategory>


</android.support.v7.preference.PreferenceScreen>